--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -24,6 +24,10 @@
             height: 15rem;
             object-fit: cover;
         }
+
+        .box-container {
+            display: flex;
+        }
     </style>
     <title>Document</title>
 
