--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -41,5 +41,23 @@
             {% endfor%}
         </tbody>
     </table>
+    <h3>작성한 댓글</h3>
+    <p class="text-muted">{{ user.comment_set.count }}개를 작성하였습니다.</p>
+    <table class="table">
+        <thead>
+            <tr class="thead-dark">
+                <th>작성 댓글</th>
+                <th>댓글 내용</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for comment in user.comment_set.all %}
+            <tr>
+                <td>{{ forloop.counter}}</td>
+                <td><a href="{% url 'articles:detail' comment.article_id %}">{{comment.content}}</a></td>
+            </tr>
+            {% endfor%}
+        </tbody>
+    </table>
     {% endblock %}
 </div>
